--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "aes-js": "^3.1.2",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
+    "cookie-session": "^2.0.0",
     "ejs": "^3.1.8",
     "express": "^4.18.2"
   },
